@@ -142,7 +142,7 @@ cm_listoffloats ()
       if (html)
         add_word ("<div class=\"listoffloats\">\n");
       else if (!no_headers)
-        add_word ("* Menu:\n\n");
+        insert_string ("* Menu:\n\n");
 
       while (temp)
         {
@@ -155,6 +155,50 @@ cm_listoffloats ()
                   execute_string ("@ref{%s, %s %s}", temp->id, temp->number,
                       temp->title);
                   add_word ("<br>\n");
+                }
+              else if (!no_headers)
+                {
+                  char *entry;
+                  char *title = expansion (temp->title, 0);
+                  int len = 5 + strlen (temp->number) + strlen (title);
+                  int shortened = 0;
+                  int i = 0;
+
+                  /* Shorten long titles by looking for a space before the 45.
+                     char.  */
+                  if (len > 45)
+                    {
+                      len = 45 - strlen (temp->number) - 5;
+                      shortened = 1;
+                      while (title[len] != ' ')
+                        len--;
+                      len += strlen (temp->number) + 9;
+                    }
+
+                  entry = xmalloc (len);
+                  if (shortened)
+                    len -= 5;
+
+                  snprintf (entry, len, "* %s %s", temp->number, title);
+
+                  if (shortened)
+                    strcat (entry, " ...");
+                  strcat (entry, ":");
+
+                  insert_string (entry);
+
+                  i = strlen (entry);
+                  while (i < 60)
+                    {
+                      insert (' ');
+                      i++;
+                    }
+
+                  insert_string (temp->id);
+                  insert ('\n');
+
+                  free (entry);
+                  free (title);
                 }
               else
                 {
